redroom/eternal-library/caliber/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readin
  labels:
    app: readin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readin
  template:
    metadata:
      name: readin
      labels:
        app: readin
    spec:
      volumes:
        - name: books-storage
          persistentVolumeClaim:
            claimName: books-pvc
        - name: caliber-config
          persistentVolumeClaim:
            claimName: caliber-config-pvc
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - dreykov
      containers:
        - name: readin
          image: lscr.io/linuxserver/calibre-web:0.6.24-ls310
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: books-storage
              mountPath: /books
              subPath: ebooks-calibre
            - name: caliber-config
              mountPath: /config
      restartPolicy: Always
