redroom/eternal-library/caliber/base/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: alchemist
  namespace: eternal-library
  annotations:
    tailscale.com/hostname: alchemist
    tailscale.com/funnel: "true"
  labels:
    tailscale.com/proxy-class: "irish-eyes"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: readin
