redroom/eternal-library/caliber/base/metallb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caliber-conductor
spec:
  type: LoadBalancer
  selector:
    app: readin
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8083
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8083
