redroom/eternal-library/caliber/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: mitchwrap.maximstroud.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alchemist
                port:
                  number: 80
  tls:
    - hosts:
        - mitchwrap.maximstroud.de
      secretName: maximstroud.de-cert
